# s3-media-endpoint-rs

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs  media.rs  micropub.rs  oauth.rs
